Added client init config options to heavily reduce quality of generated latex covered textures. Should help with #544 and #539.
Signed-off-by: LtxPgm <ltxprogrammer@outlook.com>